--- a/dubbo-common/pom.xml
+++ b/dubbo-common/pom.xml
@@ -72,6 +72,11 @@
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-demo-interface</artifactId>
+            <version>2.7.9-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
