--- a/dubbo-registry/dubbo-registry-api/pom.xml
+++ b/dubbo-registry/dubbo-registry-api/pom.xml
@@ -80,5 +80,10 @@
             <artifactId>zookeeper</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-rpc-dubbo</artifactId>
+            <version>2.7.9-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
